--- a/back-end/app/templates/list_files.html
+++ b/back-end/app/templates/list_files.html
@@ -122,7 +122,7 @@ button:disabled, input[type="submit"]:disabled {
     </ul>
 
 <form action="/logout" method="post"> 
-    <input type="submit" value="Se déconnecter" style="background-color: red;"> 
+    <input type="submit" value="Se déconnecter"> 
 </form>
 
 </body>
